--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -13,6 +13,11 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
+                <% if(name !== ""){ %>
+                <li class="nav-item">
+                    <span class="sr-only"><%= name %></span>
+                </li>
+                <% } %>
                 <li class="nav-item active">
                     <a class="nav-link" href="/">Home
                         <span class="sr-only">(current)</span>
@@ -24,8 +29,12 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">Services</a>
                 </li>
-                <li>
+                <li class="nav-item">
+                    <% if(name === ""){ %>
                     <a class="nav-link" href="/login">Login</a>
+                    <% }else{ %>
+                    <a class="nav-link" href="#"><%= name %></a>
+                    <% } %>
                 </li>
             </ul>
         </div>
