--- a/views/login.ejs
+++ b/views/login.ejs
@@ -21,11 +21,11 @@
                 Login
             </div>
             <div class="card-body">
-                <form>
+                <form action="/login" method="POST">
                     <div class="form-group">
                         <div class="row">
                             <div class="col">
-                                <input type="email" class="form-control" aria-describedby="emailHelp"
+                                <input type="email" name="email" class="form-control" aria-describedby="emailHelp"
                                     placeholder="Enter email">
                                 <small id="emailHelp" class="form-text text-muted">We'll never share your email with
                                     anyone
@@ -36,7 +36,13 @@
                     <div class="form-group">
                         <div class="row">
                             <div class="col">
-                                <input type="password" class="form-control" placeholder="Password">
+                                <input type="password" name="password" class="form-control" placeholder="Password">
+                                <% if(wrongPassword){ %>
+                                <small class="form-text text-danger">Wrong Password! Try again.</small>
+                                <% } %>
+                                <% if(wrongEmail){ %>
+                                <small class="form-text text-danger">Incorrect Email Id! Try again or Register.</small>
+                                <% } %>
                             </div>
                         </div>
                     </div>
