--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -6,16 +6,21 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-        <a class="navbar-brand" href="#">Chal Jeevi leiye</a>
+        <a class="navbar-brand" href="/">Chal Jeevi leiye</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
             aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-                <% if(name !== ""){ %>
+                <% if(user){ %>
                 <li class="nav-item">
-                    <span class="sr-only"><%= name %></span>
+                    <!-- <a class="nav-link" href="#"> -->
+                    <span class="navbar-text">
+                        Welcome!
+                        <%= user.fname %>
+                    </span>
+                    <!-- </a> -->
                 </li>
                 <% } %>
                 <li class="nav-item active">
@@ -30,10 +35,10 @@
                     <a class="nav-link" href="#">Services</a>
                 </li>
                 <li class="nav-item">
-                    <% if(name === ""){ %>
+                    <% if(!user){ %>
                     <a class="nav-link" href="/login">Login</a>
                     <% }else{ %>
-                    <a class="nav-link" href="#"><%= name %></a>
+                    <a class="nav-link" href="/logout">Logout</a>
                     <% } %>
                 </li>
             </ul>
