--- a/views/about.ejs
+++ b/views/about.ejs
@@ -6,13 +6,21 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-        <a class="navbar-brand" href="#">Chal Jeevi leiye</a>
+        <a class="navbar-brand" href="/">Chal Jeevi leiye</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
             aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
+                <% if(user){ %>
+                <li class="nav-item">
+                    <span class="navbar-text">
+                        Welcome!
+                        <%= user.fname %>
+                    </span>
+                </li>
+                <% } %>
                 <li class="nav-item">
                     <a class="nav-link" href="/">Home
                         <span class="sr-only">(current)</span>
@@ -24,8 +32,12 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">Services</a>
                 </li>
-                <li>
+                <li class="nav-item">
+                    <% if(!user){ %>
                     <a class="nav-link" href="/login">Login</a>
+                    <% }else{ %>
+                    <a class="nav-link" href="/logout">Logout</a>
+                    <% } %>
                 </li>
             </ul>
         </div>
