--- a/views/create-tour.ejs
+++ b/views/create-tour.ejs
@@ -96,7 +96,12 @@
                             <div class="row">
                                 <div class="col">
                                     <label for="name">Name of the Place:</label>
-                                    <input class="form-control" type="text" name="place_name" id="name">
+                                    <input aria-describedby="placeExists" class="form-control" type="text"
+                                        name="place_name" id="name">
+                                    <% if(placeExists){ %>
+                                    <small id="placeExists" class="form-text text-muted danger">Place already
+                                        exists!</small>
+                                    <% } %>
                                 </div>
                                 <div class="col">
                                     <label for="image">Upload Image</label>
