modified landing page

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -6,7 +6,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-        <a class="navbar-brand" href="/">Chal Jeevi leiye</a>
+        <a class="navbar-brand" href="/">TravelEasy</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
             aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -89,6 +89,83 @@
     </div>
     <!-- ./Carousel -->
 </header>
+
+<div id="gradient"></div>
+<div id="card">  
+  <h2 class="choose-us">WHY CHOOSE US?</h2>
+  <p class="content">100000+ Satisfied Guests<br><br>Earn a Lifetime of Friendship and many more benefits</p>
+  <p class="content">Largest Tour Operator for exploring India<br><br>Carry zero money on the tour</p>
+</div> 
+<h4 class="tour-video">A glimpse of some of our Top Rated Tours</h4>
+<h5 class="tour-video">just to help you decide better...</h5>
+<br><br>
+<div class="container">
+  <div class="row">    
+      <div class="col-md-6 ">
+          <div class="card">
+              <div class="card-image">
+                  <div class="embed-responsive embed-responsive-16by9">
+<iframe width="560" height="315" src="https://youtube.com/embed/2kLk3biHTe4" frameborder="0" allowfullscreen></iframe>
+</div>
+                  
+              </div><!-- card image -->
+              
+              <div class="card-content">
+                  <span class="card-title">A glimpse of incredible Kashmir?</span>                    
+                  
+              </div><!-- card content -->
+              
+             
+          </div>
+      </div>
+      <div class="col-md-6 ">
+          <div class="card">
+              <div class="card-image">
+                  <div class="embed-responsive embed-responsive-16by9">
+                          <iframe width="956" height="538" src="https://www.youtube.com/embed/Dp09YvUyVYU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+                  
+              </div><!-- card image -->           
+              <div class="card-content">
+                  <span class="card-title">Gorgeous Gujarat</span>                    
+              </div><!-- card content -->              
+          </div>
+      </div>
+  </div>
+<br><br>
+      <div class="row">    
+      <div class="col-md-6 ">
+          <div class="card">
+              <div class="card-image">
+                  <div class="embed-responsive embed-responsive-16by9">
+                          <iframe width="956" height="538" src="https://www.youtube.com/embed/8mRGnOqXpQc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+                  
+              </div><!-- card image -->
+              
+              <div class="card-content">
+                  <span class="card-title">Majestic Rajasthan </span>                    
+              </div><!-- card content -->
+              
+          </div>
+      </div>
+      <div class="col-md-6 ">
+          <div class="card">
+              <div class="card-image">
+                  <div class="embed-responsive embed-responsive-16by9">
+                          <iframe width="956" height="538" src="https://www.youtube.com/embed/2TK5WzMIQms" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+                  
+              </div><!-- card image -->
+              
+              <div class="card-content">
+                  <span class="card-title">Serene Meghalaya</span>                    
+              </div><!-- card content -->
+              
+          </div>
+      </div>
+  </div>
+</div>
 
 
 <section id="team" class="pb-5">
@@ -210,6 +287,72 @@
 </section>
 <!-- Review -->
 
+<span class="heading">User Rating</span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star"></span>
+<p>4.1 average based on 254 reviews.</p>
+<hr style="border:3px solid #f1f1f1">
+
+<div class="row">
+  <div class="side">
+    <div>5 star</div>
+  </div>
+  <div class="middle">
+    <div class="bar-container">
+      <div class="bar-5"></div>
+    </div>
+  </div>
+  <div class="side right">
+    <div>150</div>
+  </div>
+  <div class="side">
+    <div>4 star</div>
+  </div>
+  <div class="middle">
+    <div class="bar-container">
+      <div class="bar-4"></div>
+    </div>
+  </div>
+  <div class="side right">
+    <div>63</div>
+  </div>
+  <div class="side">
+    <div>3 star</div>
+  </div>
+  <div class="middle">
+    <div class="bar-container">
+      <div class="bar-3"></div>
+    </div>
+  </div>
+  <div class="side right">
+    <div>15</div>
+  </div>
+  <div class="side">
+    <div>2 star</div>
+  </div>
+  <div class="middle">
+    <div class="bar-container">
+      <div class="bar-2"></div>
+    </div>
+  </div>
+  <div class="side right">
+    <div>6</div>
+  </div>
+  <div class="side">
+    <div>1 star</div>
+  </div>
+  <div class="middle">
+    <div class="bar-container">
+      <div class="bar-1"></div>
+    </div>
+  </div>
+  <div class="side right">
+    <div>20</div>
+  </div>
+</div>
 
 <!-- Optional JavaScript -->
 <% include partials/footer %>
