--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -27,12 +27,6 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/about">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Services</a>
-                </li>
-                <li class="nav-item">
                     <% if(!user){ %>
                     <a class="nav-link" href="/login">Login</a>
                     <% }else{ %>
@@ -40,6 +34,11 @@
                     <% } %>
                 </li>
             </ul>
+            <form class="form-inline my-2 my-lg-0" action="/search" method="POST">
+                <input class="form-control mr-sm-2" type="search" name="search" placeholder="Search destinations..."
+                    aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
         </div>
     </div>
 </nav>
