--- a/views/login.ejs
+++ b/views/login.ejs
@@ -18,69 +18,98 @@
     <div class="login-form">
         <div class="card" style="width: 25rem;">
             <div class="card-header text-center">
-                Login
+                <nav>
+                    <div class="nav nav-tabs nav-fill" id="nav-tab" role="tablist">
+                        <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home"
+                            role="tab" aria-controls="nav-home" aria-selected="true">Sign-in</a>
+                        <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-profile"
+                            role="tab" aria-controls="nav-profile" aria-selected="false">Register</a>
+                    </div>
+                </nav>
             </div>
-            <div class="card-body">
-                <form action="/login" method="POST">
-                    <div class="form-group">
-                        <div class="row">
-                            <div class="col">
-                                <input type="email" name="email" class="form-control" aria-describedby="emailHelp"
-                                    placeholder="Enter email">
-                                <small id="emailHelp" class="form-text text-muted">We'll never share your email with
-                                    anyone
-                                    else.</small>
+            <div class="card-body text-center">
+                <div class="tab-content" id="nav-tabContent">
+                    <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
+                        <form action="/login" method="POST">
+                            <div class="form-group">
+                                <div class="row">
+                                    <div class="col">
+                                        <input type="email" name="email" class="form-control"
+                                            aria-describedby="emailHelp" placeholder="Enter email">
+                                        <small id="emailHelp" class="form-text text-muted">We'll never share your email
+                                            with
+                                            anyone
+                                            else.</small>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="row">
-                            <div class="col">
-                                <input type="password" name="password" class="form-control" placeholder="Password">
-                                <% if(wrongPassword){ %>
-                                <small class="form-text text-danger">Wrong Password! Try again.</small>
-                                <% } %>
-                                <% if(wrongEmail){ %>
-                                <small class="form-text text-danger">Incorrect Email Id! Try again or Register.</small>
-                                <% } %>
+                            <div class="form-group">
+                                <div class="row">
+                                    <div class="col">
+                                        <input type="password" name="password" class="form-control"
+                                            placeholder="Password">
+                                        <% if(wrongPassword){ %>
+                                        <small class="form-text text-danger">Wrong Password! Try again.</small>
+                                        <% } %>
+                                        <% if(wrongEmail){ %>
+                                        <small class="form-text text-danger">Incorrect Email Id! Try again or
+                                            Register.</small>
+                                        <% } %>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
+                            <div class="text-center">
+                                <button type="submit" class="btn btn-info btn-block round-button">Login</button>
+                            </div>
+                        </form>
                     </div>
-                    <div class="text-center">
-                        <button type="submit" class="btn btn-info btn-block">Login</button>
+                    <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
+                        <form action="/register" method="post" autocomplete="off">
+                            <div class="form-group">
+                                <div class="row">
+                                    <div class="col">
+                                        <input type="mail" class="form-control" placeholder="Email"
+                                            name="user[email_id]" value="" required>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="row">
+                                    <div class="col">
+                                        <input type="text" class="form-control" placeholder="First Name"
+                                            name="user[fname]" value="" required>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="row">
+                                    <div class="col">
+                                        <input type="text" class="form-control" placeholder="Last Name"
+                                            name="user[lname]" value="">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="row">
+                                    <div class="col">
+                                        <input type="password" class="form-control" placeholder="Password"
+                                            name="user[password]" value="">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="text-center">
+                                <button type="submit" class="btn btn-info btn-block round-button">Register</button>
+                            </div>
+                        </form>
                     </div>
-                </form>
+                </div>
             </div>
             <div class="card-footer text-center">
-                <form action="/register" method="post" autocomplete="off">
-                    <div class="input" id="register">
-                        <div class="blockinput">
-                            <i class="icon-envelope-alt"></i><input type="mail" placeholder="Email"
-                                name="user[email_id]" value="">
-                        </div>
-                        <div class="blockinput">
-                            <i class="icon-user"></i><input type="text" placeholder="Fist Name" name="user[fname]"
-                                value="">
-                        </div>
-                        <div class="blockinput">
-                            <i class="icon-user"></i><input type="text" placeholder="Last Name" name="user[lname]"
-                                value="">
-                        </div>
-                        <div class="blockinput">
-                            <i class="icon-unlock"></i><input type="password" placeholder="Password"
-                                name="user[password]" value="">
-                        </div>
-                        <div class="blockinput">
-                            <i class="icon-unlock"></i><input type="password" placeholder="Repeat Password"
-                                name="user[repeat_password]" value="">
-                        </div>
-                    </div>
-                    <button>Register</button>
-                </form>
-                <a style="text-decoration: none" href="/">Home</a>
+                <div class="alert alert-dark">
+                    <a style="text-decoration: none" class="alert-link" href="/">Go to home</a>
+                </div>
             </div>
         </div>
-
     </div>
 
     <!-- Optional JavaScript -->
