--- a/views/results.ejs
+++ b/views/results.ejs
@@ -5,7 +5,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-        <a class="navbar-brand" href="/">Chal Jeevi leiye</a>
+        <a class="navbar-brand" href="/">TravelEasy</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
             aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -20,7 +20,7 @@
                     </span>
                 </li>
                 <% } %>
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="/">Home
                         <span class="sr-only">(current)</span>
                     </a>
