--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -3,6 +3,7 @@
 
 <link rel="stylesheet" href="CSS/landing_page.css">
 <title>Tours and travels</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
@@ -183,7 +184,7 @@
                                             src="https://sunlimetech.com/portfolio/boot4menu/assets/imgs/team/img_01.png"
                                             alt="card image">
                                     </p>
-                                    <h4 class="card-title">Amanda Jones</h4>
+                                    <h4 class="card-title">Priyal Patel</h4>
                                     <p class="card-text">It has been an incredible experience to travel with # tours
                                         and
                                         travels and
@@ -220,7 +221,7 @@
                                             src="https://sunlimetech.com/portfolio/boot4menu/assets/imgs/team/img_02.png"
                                             alt="card image">
                                     </p>
-                                    <h4 class="card-title">Sam smith</h4>
+                                    <h4 class="card-title">Rashmil Panchani</h4>
                                     <p class="card-text">Had an impeccable time with my family exploring the royal
                                         state
                                         of India-
@@ -257,7 +258,7 @@
                                             src="https://sunlimetech.com/portfolio/boot4menu/assets/imgs/team/img_03.png"
                                             alt="card image">
                                     </p>
-                                    <h4 class="card-title">Julia Michaels</h4>
+                                    <h4 class="card-title">Richa Sheth</h4>
                                     <p class="card-text">Our experience of exploring North India was a perfect blend
                                         of
                                         comfort and
@@ -364,10 +365,10 @@
 				<div class="col-xs-12 col-sm-4 col-md-4">
 					<h5>Quick links</h5>
 					<ul class="list-unstyled quick-links">
-						<li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>Home</a></li>
-						<li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>About</a></li>
-						<li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>Contact us</a></li>
-						<li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>Privacy Policy</a></li>
+						<li><a href="/"><i class="fa fa-angle-double-right"></i>Home</a></li>
+						<li><a href="/about"><i class="fa fa-angle-double-right"></i>About</a></li>
+						<li><a href="/contact"><i class="fa fa-angle-double-right"></i>Contact us</a></li>
+						<li><a href="/services"><i class="fa fa-angle-double-right"></i>Privacy Policy</a></li>
 						
 					</ul>
 				</div>
@@ -389,8 +390,8 @@
 			</div>	
 			<div class="row">
 				<div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center text-white">
-					<p><u><a href="#">TravelEasy</a></u> is a Registered Website helping umpteen people explore india</p>
-					<p class="h6"> All right Reversed.<a class="text-green ml-2" href="https://www.sunlimetech.com" target="_blank">Sunlimetech</a></p>
+					<p><u><a href="#">TravelEasy</a></u> is a Registered Website helping umpteen people explore India.</p>
+					<p class="h6"> All right Reversed.<a class="text-green ml-2" href="https://www.sunlimetech.com" target="_blank"></a></p>
 				</div>
 				</hr>
 			</div>	
