--- a/views/services.ejs
+++ b/views/services.ejs
@@ -14,47 +14,45 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="/">TravelEasy</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
-                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ml-auto">
-                    <% if(user){ %>
-                    <li class="nav-item">
-                        <!-- <a class="nav-link" href="#"> -->
-                        <span class="navbar-text">
-                            Welcome!
-                            <%= user.fname %>
-                        </span>
-                        <!-- </a> -->
-                    </li>
-                    <% } %>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="/">Home
-                            <span class="sr-only">(current)</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/about">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Services</a>
-                    </li>
-                    <li class="nav-item">
-                        <% if(!user){ %>
-                        <a class="nav-link" href="/login">Login</a>
-                        <% }else{ %>
-                        <a class="nav-link" href="/logout">Logout</a>
-                        <% } %>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
+                <div class="container">
+                    <a class="navbar-brand" href="/">TravelEasy</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+                        aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarResponsive">
+                        <ul class="navbar-nav ml-auto">
+                            <% if(user){ %>
+                            <li class="nav-item">
+                                <span class="navbar-text">
+                                    Welcome!
+                                    <%= user.fname %>
+                                </span>
+                            </li>
+                            <% } %>
+                            <li class="nav-item active">
+                                <a class="nav-link" href="/">Home
+                                    <span class="sr-only">(current)</span>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <% if(!user){ %>
+                                <a class="nav-link" href="/login">Login</a>
+                                <% }else{ %>
+                                <a class="nav-link" href="/logout">Logout</a>
+                                <% } %>
+                            </li>
+                        </ul>
+                        <form class="form-inline my-2 my-lg-0" action="/search" method="POST">
+                            <input class="form-control mr-sm-2" type="search" name="search" placeholder="Search destinations..."
+                                aria-label="Search">
+                            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                        </form>
+                    </div>
+                </div>
+            </nav>
+        
 
 
     <div id="master-container">
