--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -77,7 +77,7 @@
     </article>
 
     <div class="scroll">
-        <img src="../Media/scroll.jpg">
+        <img src="../Media/scroll4.jpg">
     </div>
 
 
