--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -7,7 +7,11 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-        <a class="navbar-brand" href="/">TravelEasy</a>
+        <a class="navbar-brand" href="/">
+            <img src="/Media/logo.png" width="30" height="30" style="border-radius: 4px;"
+                class="d-inline-block align-top" alt="Logo">
+            TravelEasy
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
             aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -296,116 +300,120 @@
 </section>
 <!-- Review -->
 
-<span class="heading">User Rating</span>
-<span class="fa fa-star checked"></span>
-<span class="fa fa-star checked"></span>
-<span class="fa fa-star checked"></span>
-<span class="fa fa-star checked"></span>
-<span class="fa fa-star"></span>
-<p>4.1 average based on 254 reviews.</p>
-<hr style="border:3px solid #f1f1f1">
-
-<div class="row">
-    <div class="side">
-        <div>5 star</div>
-    </div>
-    <div class="middle">
-        <div class="bar-container">
-            <div class="bar-5"></div>
+<div class="container">
+    <span class="heading">User Rating</span>
+    <span class="fa fa-star checked"></span>
+    <span class="fa fa-star checked"></span>
+    <span class="fa fa-star checked"></span>
+    <span class="fa fa-star checked"></span>
+    <span class="fa fa-star"></span>
+    <p>4.1 average based on 254 reviews.</p>
+    <div class="row">
+        <div class="side">
+            <div>5 star</div>
         </div>
-    </div>
-    <div class="side right">
-        <div>150</div>
-    </div>
-    <div class="side">
-        <div>4 star</div>
-    </div>
-    <div class="middle">
-        <div class="bar-container">
-            <div class="bar-4"></div>
+        <div class="middle">
+            <div class="bar-container">
+                <div class="bar-5"></div>
+            </div>
         </div>
-    </div>
-    <div class="side right">
-        <div>63</div>
-    </div>
-    <div class="side">
-        <div>3 star</div>
-    </div>
-    <div class="middle">
-        <div class="bar-container">
-            <div class="bar-3"></div>
+        <div class="side right">
+            <div>150</div>
         </div>
-    </div>
-    <div class="side right">
-        <div>15</div>
-    </div>
-    <div class="side">
-        <div>2 star</div>
-    </div>
-    <div class="middle">
-        <div class="bar-container">
-            <div class="bar-2"></div>
+        <div class="side">
+            <div>4 star</div>
         </div>
-    </div>
-    <div class="side right">
-        <div>6</div>
-    </div>
-    <div class="side">
-        <div>1 star</div>
-    </div>
-    <div class="middle">
-        <div class="bar-container">
-            <div class="bar-1"></div>
+        <div class="middle">
+            <div class="bar-container">
+                <div class="bar-4"></div>
+            </div>
         </div>
-    </div>
-    <div class="side right">
-        <div>20</div>
+        <div class="side right">
+            <div>63</div>
+        </div>
+        <div class="side">
+            <div>3 star</div>
+        </div>
+        <div class="middle">
+            <div class="bar-container">
+                <div class="bar-3"></div>
+            </div>
+        </div>
+        <div class="side right">
+            <div>15</div>
+        </div>
+        <div class="side">
+            <div>2 star</div>
+        </div>
+        <div class="middle">
+            <div class="bar-container">
+                <div class="bar-2"></div>
+            </div>
+        </div>
+        <div class="side right">
+            <div>6</div>
+        </div>
+        <div class="side">
+            <div>1 star</div>
+        </div>
+        <div class="middle">
+            <div class="bar-container">
+                <div class="bar-1"></div>
+            </div>
+        </div>
+        <div class="side right">
+            <div>20</div>
+        </div>
     </div>
 </div>
 <br>
-<section id="footer">
-    <div class="container">
-        <div class="row text-center text-xs-center text-sm-left text-md-left">
-            <div class="col-xs-12 col-sm-4 col-md-4">
+<div>
+    <section id="footer">
+        <div class="container">
+            <div class="row text-center text-xs-center text-sm-left text-md-left">
+                <div class="col-xs-12 col-sm-4 col-md-4">
 
+                </div>
+                <div class="col-xs-12 col-sm-4 col-md-4">
+                    <h5>Quick links</h5>
+                    <ul class="list-unstyled quick-links">
+                        <li><a href="/"><i class="fa fa-angle-double-right"></i>Home</a></li>
+                        <li><a href="/about"><i class="fa fa-angle-double-right"></i>About</a></li>
+                        <li><a href="/contact"><i class="fa fa-angle-double-right"></i>Contact us</a></li>
+                        <li><a href="/privacy-policy"><i class="fa fa-angle-double-right"></i>Privacy Policy</a></li>
+
+                    </ul>
+                </div>
+                <div class="col-xs-12 col-sm-4 col-md-4">
+                </div>
             </div>
-            <div class="col-xs-12 col-sm-4 col-md-4">
-                <h5>Quick links</h5>
-                <ul class="list-unstyled quick-links">
-                    <li><a href="/"><i class="fa fa-angle-double-right"></i>Home</a></li>
-                    <li><a href="/about"><i class="fa fa-angle-double-right"></i>About</a></li>
-                    <li><a href="/contact"><i class="fa fa-angle-double-right"></i>Contact us</a></li>
-                    <li><a href="/services"><i class="fa fa-angle-double-right"></i>Privacy Policy</a></li>
-
-                </ul>
+            <div class="row">
+                <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-5">
+                    <ul class="list-unstyled list-inline social text-center">
+                        <li class="list-inline-item"><a href="javascript:void();"><i class="fa fa-facebook"></i></a>
+                        </li>
+                        <li class="list-inline-item"><a href="javascript:void();"><i class="fa fa-twitter"></i></a></li>
+                        <li class="list-inline-item"><a href="javascript:void();"><i class="fa fa-instagram"></i></a>
+                        </li>
+                        <li class="list-inline-item"><a href="javascript:void();"><i class="fa fa-google-plus"></i></a>
+                        </li>
+                        <li class="list-inline-item"><a href="javascript:void();" target="_blank"><i
+                                    class="fa fa-envelope"></i></a></li>
+                    </ul>
+                </div>
+                </hr>
             </div>
-            <div class="col-xs-12 col-sm-4 col-md-4">
-
+            <div class="row">
+                <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center text-white">
+                    <p><u><a href="#">TravelEasy</a></u> is a Registered Website helping umpteen people explore India.
+                    </p>
+                    <p class="h6"> All right Reserved.></p>
+                </div>
+                </hr>
             </div>
         </div>
-        <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-5">
-                <ul class="list-unstyled list-inline social text-center">
-                    <li class="list-inline-item"><a href="javascript:void();"><i class="fa fa-facebook"></i></a></li>
-                    <li class="list-inline-item"><a href="javascript:void();"><i class="fa fa-twitter"></i></a></li>
-                    <li class="list-inline-item"><a href="javascript:void();"><i class="fa fa-instagram"></i></a></li>
-                    <li class="list-inline-item"><a href="javascript:void();"><i class="fa fa-google-plus"></i></a></li>
-                    <li class="list-inline-item"><a href="javascript:void();" target="_blank"><i
-                                class="fa fa-envelope"></i></a></li>
-                </ul>
-            </div>
-            </hr>
-        </div>
-        <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center text-white">
-                <p><u><a href="#">TravelEasy</a></u> is a Registered Website helping umpteen people explore India.</p>
-                <p class="h6"> All right Reversed.<a class="text-green ml-2" href="https://www.sunlimetech.com"
-                        target="_blank"></a></p>
-            </div>
-            </hr>
-        </div>
-    </div>
-</section>
+    </section>
+</div>
 <!-- ./Footer -->
 
 <!-- Optional JavaScript -->
