--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -9,17 +9,21 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="../CSS/contact_us.css">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <title>CONTACT</title>
 </head>
 
-<body data-vide-bg="../Media/contactbg">
+<body data-vide-bg="/Media/contactbg">
 
+    <link rel="stylesheet" href="/CSS/contact_us.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <title>CONTACT</title>
     <!--navbar-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="/">TravelEasy</a>
+            <a class="navbar-brand" href="/">
+                <img src="/Media/logo.png" width="30" height="30" style="border-radius: 4px;"
+                    class="d-inline-block align-top" alt="Logo">
+                TravelEasy
+            </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -94,7 +98,7 @@
 
     <!-- Optional JavaScript -->
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
-    <script src="../JS/jquery.vide.js"></script>
+    <script src="/JS/jquery.vide.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
