--- a/public/CSS/landing_page.css
+++ b/public/CSS/landing_page.css
@@ -364,7 +364,7 @@ p.content {
 
 @import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
 section {
-  padding: 60px 0;
+  /* padding: 60px 0; */
 }
 
 section .section-title {
