--- a/views/itinerary.ejs
+++ b/views/itinerary.ejs
@@ -1,33 +1,17 @@
 <% include partials/header %>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <link rel="stylesheet" type="text/css" href="/CSS/itinery_display.css" />
-<link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-/>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <div class="container">
     <a class="navbar-brand" href="/">
-      <img
-        src="/Media/logo.png"
-        width="30"
-        height="30"
-        style="border-radius: 4px;"
-        class="d-inline-block align-top"
-        alt="Logo"
-      />
+      <img src="/Media/logo.png" width="30" height="30" style="border-radius: 4px;" class="d-inline-block align-top"
+        alt="Logo" />
       TravelEasy
     </a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-toggle="collapse"
-      data-target="#navbarResponsive"
-      aria-controls="navbarResponsive"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+      aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -39,9 +23,8 @@
           </span>
         </li>
         <% } %>
-        <li class="nav-item active">
-          <a class="nav-link" href="/"
-            >Home
+        <li class="nav-item">
+          <a class="nav-link" href="/">Home
             <span class="sr-only">(current)</span>
           </a>
         </li>
@@ -54,13 +37,8 @@
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0" action="/search" method="POST">
-        <input
-          class="form-control mr-sm-2"
-          type="search"
-          name="search"
-          placeholder="Search destinations..."
-          aria-label="Search"
-        />
+        <input class="form-control mr-sm-2" type="search" name="search" placeholder="Search destinations..."
+          aria-label="Search" />
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
           Search
         </button>
@@ -75,11 +53,7 @@
 <div class="carousel-container">
   <div class="carousel">
     <% for(var i=0; i < places.length && i < 6; i++ ) { %>
-    <img
-      src="<%= places[i].image_path %>"
-      class="item <%= items[i] %>"
-      alt="<%= places[i].name %>"
-    />
+    <img src="<%= places[i].image_path %>" class="item <%= items[i] %>" alt="<%= places[i].name %>" />
     <% } %>
     <!-- <img src="/IMAGEUPLOADS/IMG_1362.JPG" class="item f" alt="image"> -->
   </div>
@@ -171,7 +145,7 @@
   </div>
 </div>
 
-<button class="btn" >
+<button class="btn">
   <i class="fa fa-download"></i> Download full itinery
 </button>
 <br /><br />
