--- a/public/CSS/contact_us.css
+++ b/public/CSS/contact_us.css
@@ -9,7 +9,7 @@ body {
   border-radius: 25px;
   margin-top: 50px;
   margin-right: 1200px;
-  background-color: cadetblue;
+  background-color: rgb(221, 226, 231);
   fill-opacity: 1;
   border-style: 2px solid rgb(245, 245, 182);
 }
