--- a/views/privacy_policy.ejs
+++ b/views/privacy_policy.ejs
@@ -1,7 +1,7 @@
 <% include partials/header %>
 <link rel="stylesheet" href="/CSS/services.css">
 <title>Services</title>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
     <div class="container">
         <a class="navbar-brand" href="/">
             <img src="/Media/logo.png" width="40" height="40" style="border-radius: 4px;"
