--- a/views/itinerary.ejs
+++ b/views/itinerary.ejs
@@ -170,10 +170,12 @@
     </div>
   </div>
 </div>
+<a href="\IMAGEUPLOADS\char_dham.rtf" download>
+  <button class="btn">
+    <i class="fa fa-download"></i> Download full itinery
+  </button>
+</a>
 
-<button class="btn" >
-  <i class="fa fa-download"></i> Download full itinery
-</button>
 <br /><br />
 <!--optional javascript and Jquery-->
 <script src="/JS/itinery_display.js"></script>
